--- a/style.css
+++ b/style.css
@@ -139,14 +139,10 @@ body{
     border-radius: 15px;
     height: 350px;
     width: 350px;
-    opacity: 0.7;
+   
 
 }
-.container img:hover{
-    opacity: 1;
-    transform: scale(0.9);
-    cursor: pointer;
-}
+
 
 .container .inner {
     border: 2px solid black;
@@ -154,9 +150,14 @@ body{
     width: 350px;
     border-radius: 15px;
     padding: 5px;
+    opacity: 0.8;
     box-shadow: 7px 6px;
     background: linear-gradient(rgb(249, 134, 2),rgb(0, 0, 0),rgb(249, 134, 2));
 
+}
+.container .inner:hover{
+    opacity: 1;
+    transform:scale(0.9);
 }
 
 .inner p {
