--- a/style.css
+++ b/style.css
@@ -242,3 +242,65 @@ button:hover{
     text-shadow: 2px 1px rgb(232, 231, 230);
 
 }
+@media (max-width: 768px){
+    .container {
+      display: grid;
+      width: 85%;
+      height: auto;
+      grid-template-areas:
+        'heading1'
+        'image1'
+        'image2'
+        'image3'
+        'image4'
+        'image5'
+        'heading2'
+        'image6'
+        'image7'
+        'image8'
+        'image9'
+        'image10'
+        'image11'
+        'new'
+        'heading3'
+        'image12'
+        'image13'
+        'image14'
+        'image15'
+        'image16'
+        'image17'
+        'heading4'
+        'image18'
+        'image19';
+    }
+  
+    body {
+      width: 100%;
+      overflow-x: hidden;
+      margin-left: 25px;
+    }
+  
+    .container img {
+      width: 100%;
+      height: 90%;
+      max-width: 100%;
+    }
+   #mainheading{
+    font-size: 35px;
+    font-weight: bold;
+    text-align: left;
+    margin-left: 15px;
+    padding-left: 0;
+    position: relative;
+    right:22px;
+   }
+    .container .inner {
+      width: 100%;
+      height: auto;
+    }
+  
+    .logo img {
+      display: none;
+    }
+    
+  }
